# SpotlightAPI_My_reprise

./: pyproject.toml
spotlight/: db.sqlite3  permissions.py
spotlight/comment/: admin.py  models.py  serializers.py  urls.py  views.py
spotlight/comment/migrations/: 0001_initial.py  0002_initial.py
spotlight/event/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
spotlight/event/migrations/: 0001_initial.py  0002_remove_eventmodel_event_admin_and_more.py  0003_alter_eventmodel_start_time.py  0004_alter_eventmodel_start_time.py  0005_alter_eventmodel_start_time.py  0006_alter_eventmodel_start_time.py  0007_eventmodel_member_count_eventmodel_members_and_more.py  0008_alter_eventmodel_members_alter_eventmodel_start_time.py  0009_alter_eventmodel_start_time.py  0010_alter_eventmodel_start_time.py
spotlight/organization/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
spotlight/organization/migrations/: 0001_initial.py  0002_alter_organizationmodel_coord_x_and_more.py  0003_alter_organizationmodel_coord_x_and_more.py  0004_organizationmodel_organization_admin_and_more.py  0005_alter_organizationmodel_organization_admin.py  0006_remove_organizationmodel_organization_admin_and_more.py  0007_remove_organizationmodel_image_organizationimages.py  0008_alter_organizationimages_organization.py  (+1 more)
spotlight/place/: models.py  permissions.py  serializers.py  urls.py  views.py
spotlight/settings/: settings.py  urls.py
spotlight/user/: admin.py  models.py  serializers.py  urls.py  views.py
(+5 files in other folders)
